; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/qnx4/extr_inode.c_qnx4_write_begin.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/qnx4/extr_inode.c_qnx4_write_begin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.address_space = type { i32 }
%struct.page = type { i32 }
%struct.qnx4_inode_info = type { i32 }

@qnx4_get_block = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, %struct.address_space*, i32, i32, i32, %struct.page**, i8**)* @qnx4_write_begin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qnx4_write_begin(%struct.file* %0, %struct.address_space* %1, i32 %2, i32 %3, i32 %4, %struct.page** %5, i8** %6) #0 {
  %8 = alloca %struct.file*, align 8
  %9 = alloca %struct.address_space*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.page**, align 8
  %14 = alloca i8**, align 8
  %15 = alloca %struct.qnx4_inode_info*, align 8
  store %struct.file* %0, %struct.file** %8, align 8
  store %struct.address_space* %1, %struct.address_space** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store %struct.page** %5, %struct.page*** %13, align 8
  store i8** %6, i8*** %14, align 8
  %16 = load %struct.address_space*, %struct.address_space** %9, align 8
  %17 = getelementptr inbounds %struct.address_space, %struct.address_space* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call %struct.qnx4_inode_info* @qnx4_i(i32 %18)
  store %struct.qnx4_inode_info* %19, %struct.qnx4_inode_info** %15, align 8
  %20 = load %struct.page**, %struct.page*** %13, align 8
  store %struct.page* null, %struct.page** %20, align 8
  %21 = load %struct.file*, %struct.file** %8, align 8
  %22 = load %struct.address_space*, %struct.address_space** %9, align 8
  %23 = load i32, i32* %10, align 4
  %24 = load i32, i32* %11, align 4
  %25 = load i32, i32* %12, align 4
  %26 = load %struct.page**, %struct.page*** %13, align 8
  %27 = load i8**, i8*** %14, align 8
  %28 = load i32, i32* @qnx4_get_block, align 4
  %29 = load %struct.qnx4_inode_info*, %struct.qnx4_inode_info** %15, align 8
  %30 = getelementptr inbounds %struct.qnx4_inode_info, %struct.qnx4_inode_info* %29, i32 0, i32 0
  %31 = call i32 @cont_write_begin(%struct.file* %21, %struct.address_space* %22, i32 %23, i32 %24, i32 %25, %struct.page** %26, i8** %27, i32 %28, i32* %30)
  ret i32 %31
}

declare dso_local %struct.qnx4_inode_info* @qnx4_i(i32) #1

declare dso_local i32 @cont_write_begin(%struct.file*, %struct.address_space*, i32, i32, i32, %struct.page**, i8**, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
